# bachelor_diploma_work

./: README.md  pyproject.toml
data/: composite_plate_buckling_data_20260125_190012.csv  data_statistics_20260125_190012.txt  generate_data.py
experiments/: adaptive_vs_nonadaptive.py
experiments/results/: experiment_results.npy  results_summary_20260218_203016.txt
src/models/: adaptive.py  non_adaptive.py
src/strategies/: max_variance.py
src/utils/: data.py  metrics.py  plots.py  preprocessor.py
