[project]
name = "bachelor-diploma-work"
version = "0.1.0"
description = "Разработка и сравнение адаптивных суррогатных моделей на основе гауссовских процессов для предсказания критической нагрузки на потерю устойчивости композитной панели. Модели обучаются на синтетических данных, а их адаптивность достигается за счёт активного выбора точек (максимизация априорной дисперсии) с целью минимизировать число итераций при заданной точности."
authors = [
    {name = "Aynur Nuryyeva",email = "nuryyevva@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (==3.0.0)",
    "matplotlib (==3.10.8)",
    "scipy (==1.17.0)",
    "scikit-learn (==1.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
